// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Col Offset renders col-md-offset-2 1`] = `
.c0 {
  min-height: 1px;
  min-width: 0;
  flex: 1 0 0;
}

@media (min-width: 768px) {
  .c0 {
    flex: 0 0 auto;
    width: 50%;
    margin-left: 33.333333333333336%;
  }
}

<div
  class="c0"
  data-grid="col-true col-md"
>
  col
</div>
`;

exports[`Col Offset renders col-offset-3 1`] = `
.c0 {
  min-height: 1px;
  min-width: 0;
  flex: 0 0 auto;
  width: 50%;
  margin-left: 25%;
}

<div
  class="c0"
  data-grid="col"
>
  col
</div>
`;
